--- a/Web_Development_Projects/Movie_Ranking/index.html
+++ b/Web_Development_Projects/Movie_Ranking/index.html
@@ -1,34 +1,59 @@
-<h1>The Best Movies According to Brian</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>The Best Movies According to Brian</title>
+		<style>
+			h1 {
+				text-align: center;
+			}
+			h2 {
+				text-align: center;
+			}
+			h3 {
+				text-align: center;
+			}
+			p {
+				text-align: center;
+			}
+		</style>
+	</head>
+	<body>
+		<h1>The Best Movies According to Brian</h1>
 
-<h2>My top 3 movies of all-time.</h2>
+		<h2>My top 3 movies of all-time.</h2>
 
-<hr />
+		<hr />
 
-<h3>Interstellar</h3>
-<p>
-	Interstellar is a 2014 epic science fiction film directed, co-written, and
-	co-produced by Christopher Nolan. It stars Matthew McConaughey, Anne Hath
-	away, Jessica Chastain, Bill Irwin, Ellen Burstyn, John Lithgow, Michael
-	Caine, and Matt Damon. Set in a dystopian future where humanity is struggling
-	to survive, the film follows a group of astronauts who travel through a
-	wormhole near Saturn in search of a new home for humanity.
-</p>
+		<h3>Interstellar</h3>
+		<p>
+			Interstellar is a 2014 epic science fiction film directed, co-written, and
+			co-produced by Christopher Nolan. It stars Matthew McConaughey, Anne Hath
+			away, Jessica Chastain, Bill Irwin, Ellen Burstyn, John Lithgow, Michael
+			Caine, and Matt Damon. Set in a dystopian future where humanity is
+			struggling to survive, the film follows a group of astronauts who travel
+			through a wormhole near Saturn in search of a new home for humanity.
+		</p>
 
-<h3>Hereditary</h3>
-<p>
-	Hereditary is a 2018 American supernatural horror film written and directed by
-	Ari Aster, in his feature film directorial debut. It stars Toni Collette, Alex
-	Wolff, Milly Shapiro, and Gabriel Byrne as a family haunted by a mysterious
-	presence after the death of their secretive grandmother.
-</p>
+		<h3>Hereditary</h3>
+		<p>
+			Hereditary is a 2018 American supernatural horror film written and
+			directed by Ari Aster, in his feature film directorial debut. It stars
+			Toni Collette, Alex Wolff, Milly Shapiro, and Gabriel Byrne as a family
+			haunted by a mysterious presence after the death of their secretive
+			grandmother.
+		</p>
 
-<h3>Spider-man: Into the Spider-Verse</h3>
-<p>
-	Bitten by a radioactive spider in the subway, Brooklyn teenager Miles Morales
-	suddenly develops mysterious powers that transform him into the one and only
-	Spider-Man. When he meets Peter Parker, he soon realizes that there are many
-	others who share his special, high-flying talents. Miles must now use his
-	newfound skills to battle the evil Kingpin, a hulking madman who can open
-	portals to other universes and pull different versions of Spider-Man into our
-	world.
-</p>
+		<h3>Spider-man: Into the Spider-Verse</h3>
+		<p>
+			Bitten by a radioactive spider in the subway, Brooklyn teenager Miles
+			Morales suddenly develops mysterious powers that transform him into the
+			one and only Spider-Man. When he meets Peter Parker, he soon realizes that
+			there are many others who share his special, high-flying talents. Miles
+			must now use his newfound skills to battle the evil Kingpin, a hulking
+			madman who can open portals to other universes and pull different versions
+			of Spider-Man into our world.
+		</p>
+	</body>
+</html>
